# mongodb-decision-intelligence-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py  knowledge.py  relationship_intelligence.py  workspace.py
backend/app/core/: config.py
backend/app/db/: mongodb.py
backend/app/models/: __init__.py  health.py  knowledge.py  relationship_intelligence.py  workspace.py
backend/app/repositories/: __init__.py  base.py  collections.py
backend/app/services/: __init__.py  embedding_service.py  knowledge.py  relationship_intelligence.py  workspace.py
backend/scripts/: seed_demo_data.py
backend/tests/: test_health.py  test_knowledge.py  test_relationship_intelligence.py  test_workspace.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  development.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/health/: page.tsx
frontend/src/components/ui/: button.tsx
sample_data/: README.md
scripts/: bootstrap.sh  check.sh
